create a list of fruits and redirect to there specific image with anchor tags

--- a/index.html
+++ b/index.html
@@ -1,20 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-
 <body>
-    <h1>Avengers</h1>
-    <h2>Iron Man</h2>
-    <p>Also goes by the name <strong>Tony Stark</strong></p>
-    <h2>Captain America</h2>
-    <p>Also goes by the name <strong>Steve Rogers</strong></p>
-    <h2>Hulk</h2>
-    <p>Also goes by the name <strong>Bruce Banner</strong></p>
+    <h1>List of Fruits</h1>
+    <ul>
+        <li>Apple <a href="https://2.imimg.com/data2/PR/EP/MY-4155721/red-delicious-1000x1000.jpg">see an apple</a></li>
+        <li>Orange <a
+                href="https://www.jiomart.com/images/product/original/590000449/orange-1-kg-product-images-o590000449-p590034326-0-202412031736.jpg?im=Resize=(420,420)">see
+                an orange</a></li>
+        <li>Banana <a
+                href="https://5.imimg.com/data5/SELLER/Default/2023/6/315297085/PZ/AC/VH/562159/fresh-bananas-1000x1000.jpg">see
+                a banana</a></li>
+    </ul>
 </body>
-
 </html>
