create a portfolio website using basic html tags

--- a/index.html
+++ b/index.html
@@ -1,20 +1,52 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Pankaj Portfolio</title>
 </head>
 <body>
-    <h1>List of Fruits</h1>
+<!-- Header Section -->
+<center>
+    <img src="https://lh3.googleusercontent.com/a/ACg8ocLRZMME6F0rgT8S4i-I_IYDpO3Kx8C1VHcNkNR89bLZ88DcNnDk8A=s288-c-no"
+        alt="Pankaj Kumar" width="180" style="border-radius: 50%;">
+    <h1>Pankaj Kumar</h1>
+</center>
+
+<hr>
+
+<!-- Education Section -->
+<h2>Education</h2>
+<p>Bachelor of Technology (B.Tech)</p>
+<p>12th - CBSE Board</p>
+<p>10th - CBSE Board</p>
+
+<hr>
+
+<!-- Skills Section -->
+<h2>Skills</h2>
+<ul>
+    <li>HTML</li>
+    <li>CSS</li>
+    <li>JavaScript</li>
+    <li>ReactJS</li>
+    <li>Node.js</li>
+</ul>
+
+<hr>
+
+<!-- Hobbies Section -->
+<h2>Hobbies</h2>
     <ul>
-        <li>Apple <a href="https://2.imimg.com/data2/PR/EP/MY-4155721/red-delicious-1000x1000.jpg">see an apple</a></li>
-        <li>Orange <a
-                href="https://www.jiomart.com/images/product/original/590000449/orange-1-kg-product-images-o590000449-p590034326-0-202412031736.jpg?im=Resize=(420,420)">see
-                an orange</a></li>
-        <li>Banana <a
-                href="https://5.imimg.com/data5/SELLER/Default/2023/6/315297085/PZ/AC/VH/562159/fresh-bananas-1000x1000.jpg">see
-                a banana</a></li>
+        <li>Coding</li>
+        <li>Music</li>
+        <li>Traveling</li>
+        <li>Gaming</li>
     </ul>
+<hr>
+
+<!-- Contact Section -->
+<h2>Contact</h2>
+<p>Email: pankaj1234kashyap@gmail.com</p>
+<p>Phone: +91 7559451831</p>
+
 </body>
 </html>
