--- a/index.html
+++ b/index.html
@@ -1,52 +1,32 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <title>Pankaj Portfolio</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
 </head>
 <body>
-<!-- Header Section -->
-<center>
-    <img src="https://lh3.googleusercontent.com/a/ACg8ocLRZMME6F0rgT8S4i-I_IYDpO3Kx8C1VHcNkNR89bLZ88DcNnDk8A=s288-c-no"
-        alt="Pankaj Kumar" width="180" style="border-radius: 50%;">
-    <h1>Pankaj Kumar</h1>
-</center>
 
-<hr>
+    <!-- 1. Question -->
+    <p>Hello World!</p>
+    <p>IamaDeltait!</p>
+    <p>I am Pankaj kumar welcome to my website</p>
+    <!-- 2. Question -->
+    <h1>Delta</h1>
+    <h2>FullStackWebDevelopment</h2>
+    <h3>MERNStack</h3>
+    <p>Let'sbeginourlearningjourney!</p>
+    <!-- 3. Question -->
+    <a href="https: //www.apnacollege.in/">GotoApnaCollege</a>
 
-<!-- Education Section -->
-<h2>Education</h2>
-<p>Bachelor of Technology (B.Tech)</p>
-<p>12th - CBSE Board</p>
-<p>10th - CBSE Board</p>
-
-<hr>
-
-<!-- Skills Section -->
-<h2>Skills</h2>
-<ul>
-    <li>HTML</li>
-    <li>CSS</li>
-    <li>JavaScript</li>
-    <li>ReactJS</li>
-    <li>Node.js</li>
-</ul>
-
-<hr>
-
-<!-- Hobbies Section -->
-<h2>Hobbies</h2>
-    <ul>
-        <li>Coding</li>
-        <li>Music</li>
-        <li>Traveling</li>
-        <li>Gaming</li>
-    </ul>
-<hr>
-
-<!-- Contact Section -->
-<h2>Contact</h2>
-<p>Email: pankaj1234kashyap@gmail.com</p>
-<p>Phone: +91 7559451831</p>
-
+<!-- 4. Question -->
+<h3>RankList</h3>
+<ol>
+    <li>Deepak</li>
+    <li>Epsita</li>
+    <li>Lakshita</li>
+    <li>Tanmay</li>
+    <li>Agrim</li>
+</ol>
 </body>
 </html>
