--- a/index.html
+++ b/index.html
@@ -6,27 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-
-    <!-- 1. Question -->
-    <p>Hello World!</p>
-    <p>IamaDeltait!</p>
-    <p>I am Pankaj kumar welcome to my website</p>
-    <!-- 2. Question -->
-    <h1>Delta</h1>
-    <h2>FullStackWebDevelopment</h2>
-    <h3>MERNStack</h3>
-    <p>Let'sbeginourlearningjourney!</p>
-    <!-- 3. Question -->
-    <a href="https: //www.apnacollege.in/">GotoApnaCollege</a>
-
-<!-- 4. Question -->
-<h3>RankList</h3>
-<ol>
-    <li>Deepak</li>
-    <li>Epsita</li>
-    <li>Lakshita</li>
-    <li>Tanmay</li>
-    <li>Agrim</li>
-</ol>
+    <h1>Pythagorean theorem says a <sup>2</sup>+ b <sup>2</sup> = c <sup>2</sup></h1>
+    <h1>Formula of glucose is C<sub>6</sub>H<sub>12</sub>O<sub>6</sub></h1>
 </body>
 </html>
