added semantics elements to portfolio

--- a/index.html
+++ b/index.html
@@ -1,12 +1,63 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Pankaj Portfolio</title>
 </head>
 <body>
-    <h1>Pythagorean theorem says a <sup>2</sup>+ b <sup>2</sup> = c <sup>2</sup></h1>
-    <h1>Formula of glucose is C<sub>6</sub>H<sub>12</sub>O<sub>6</sub></h1>
+<!-- Header Section -->
+<header>
+    <center>
+        <img src="https://lh3.googleusercontent.com/a/ACg8ocLRZMME6F0rgT8S4i-I_IYDpO3Kx8C1VHcNkNR89bLZ88DcNnDk8A=s288-c-no"
+            alt="Pankaj Kumar" width="180" style="border-radius: 50%;">
+        <h1>Pankaj Kumar</h1>
+    </center>
+
+    <hr>
+</header>
+
+<section>
+    <!-- Education Section -->
+    <h2>Education</h2>
+    <p>Bachelor of Technology (B.Tech)</p>
+    <p>12th - CBSE Board</p>
+    <p>10th - CBSE Board</p>
+
+    <hr>
+</section>
+
+<section>
+    <!-- Skills Section -->
+    <h2>Skills</h2>
+    <ul>
+        <li>HTML</li>
+        <li>CSS</li>
+        <li>JavaScript</li>
+        <li>ReactJS</li>
+        <li>Node.js</li>
+    </ul>
+
+    <hr>
+</section>
+
+<section>
+    <!-- Hobbies Section -->
+    <h2>Hobbies</h2>
+    <ul>
+        <li>Coding</li>
+        <li>Music</li>
+        <li>Traveling</li>
+        <li>Gaming</li>
+    </ul>
+    <hr>
+</section>
+
+<footer>
+    <!-- Contact Section -->
+    <h2>Contact</h2>
+    <p>Email: pankaj1234kashyap@gmail.com</p>
+    <p>Phone: +91 7559451831</p>
+    <h2>Made by Pankaj Love You</h2>
+</footer>
+
 </body>
 </html>
