--- a/index.html
+++ b/index.html
@@ -1,63 +1,26 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <title>Pankaj Portfolio</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
 </head>
 <body>
-<!-- Header Section -->
-<header>
-    <center>
-        <img src="https://lh3.googleusercontent.com/a/ACg8ocLRZMME6F0rgT8S4i-I_IYDpO3Kx8C1VHcNkNR89bLZ88DcNnDk8A=s288-c-no"
-            alt="Pankaj Kumar" width="180" style="border-radius: 50%;">
-        <h1>Pankaj Kumar</h1>
-    </center>
+    <!-- 1. Question -->
+    <p>
+        <!-- <audio></audio> -->
+        for audio uisng
+        <!-- <video src=""></video> -->
+        for video using
+    </p>
 
-    <hr>
-</header>
+    <!-- 2. Question -->
+    <p>Yes, the HTML video tag is a semantic tag.</p>
 
-<section>
-    <!-- Education Section -->
-    <h2>Education</h2>
-    <p>Bachelor of Technology (B.Tech)</p>
-    <p>12th - CBSE Board</p>
-    <p>10th - CBSE Board</p>
+    <!-- 3. Question -->
+    <p>Today is the 9<sup>th</sup>of October and 2<sup>4</sup>=16 always</p>
 
-    <hr>
-</section>
-
-<section>
-    <!-- Skills Section -->
-    <h2>Skills</h2>
-    <ul>
-        <li>HTML</li>
-        <li>CSS</li>
-        <li>JavaScript</li>
-        <li>ReactJS</li>
-        <li>Node.js</li>
-    </ul>
-
-    <hr>
-</section>
-
-<section>
-    <!-- Hobbies Section -->
-    <h2>Hobbies</h2>
-    <ul>
-        <li>Coding</li>
-        <li>Music</li>
-        <li>Traveling</li>
-        <li>Gaming</li>
-    </ul>
-    <hr>
-</section>
-
-<footer>
-    <!-- Contact Section -->
-    <h2>Contact</h2>
-    <p>Email: pankaj1234kashyap@gmail.com</p>
-    <p>Phone: +91 7559451831</p>
-    <h2>Made by Pankaj Love You</h2>
-</footer>
-
+    <!-- 4. Question -->
+    <p>You have to complete this exercise on your own as the portfolio section will be different for each student.</p>
 </body>
 </html>
