--- a/index.html
+++ b/index.html
@@ -1,26 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
 </head>
+
 <body>
-    <!-- 1. Question -->
-    <p>
-        <!-- <audio></audio> -->
-        for audio uisng
-        <!-- <video src=""></video> -->
-        for video using
-    </p>
-
-    <!-- 2. Question -->
-    <p>Yes, the HTML video tag is a semantic tag.</p>
-
-    <!-- 3. Question -->
-    <p>Today is the 9<sup>th</sup>of October and 2<sup>4</sup>=16 always</p>
-
-    <!-- 4. Question -->
-    <p>You have to complete this exercise on your own as the portfolio section will be different for each student.</p>
-</body>
+    <table border="black">
+        <caption>
+            Student Information
+        </caption>
+        <tr>
+            <th rowspan="6">Info</th>
+            <th rowspan="2">Name</th>
+            <th colspan="2">Address</th>
+        </tr>
+        <tr>
+            <th>City</th>
+            <th>House</th>
+        </tr>
+        <tr>
+            <td>A</td>
+            <td>Delhi</td>
+            <td>1</td>
+        </tr>
+        <tr>
+            <td>B</td>
+            <td>Mumbai</td>
+        </tr>
+    </table>
+    </body>
 </html>
