--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -8,9 +9,7 @@
 
 <body>
     <table border="black">
-        <caption>
-            Student Information
-        </caption>
+        <caption>Student Information</caption>
         <tr>
             <th rowspan="6">Info</th>
             <th rowspan="2">Name</th>
@@ -28,7 +27,19 @@
         <tr>
             <td>B</td>
             <td>Mumbai</td>
+            <td>2</td>
+            </tr>
+            <tr>
+                <td>C</td>
+                <td>Kolkata</td>
+                <td>3</td>
+            </tr>
+            <tr>
+                <td>D</td>
+                <td>Pune</td>
+                <td>4</td>
         </tr>
     </table>
-    </body>
+</body>
+
 </html>
