--- a/index.html
+++ b/index.html
@@ -6,38 +6,39 @@
     <title>Document</title>
 </head>
 <body>
-    <form>
+    <h2>Feedback Form</h2>
+    
+    <form action="/contact">
         <label for="name">Name:</label>
-        <input type="text" name="name" id="name" />
-        <br /><br />
+<input type="text" placeholder="Write your name" id="name" />
+<br /><br />
 
-        <label for="sex">Sex:</label><br />
-        <input type="radio" name="sex" id="male" value="male" />
-        <label for="male">Male</label>
-
-        <input type="radio" name="sex" id="female" value="female" />
-        <label for="female">Female</label>
-        <br /><br />
-
-<label for="country">Country:</label>
-<select name="country" id="country">
-    <option>Select an option</option>
-    <option value="india">India</option>
-    <option value="usa">USA</option>
-    <option value="nepal">Nepal</option>
-    <option value="canada">Canada</option>
-</select>
+<label for="email">Email:</label>
+<input type="email" placeholder="Write your email" id="email" />
 <br /><br />
 
 <label for="message">Message:</label><br />
 <textarea name="message" id="message" cols="30" rows="4"></textarea>
 <br /><br />
 
-<input type="checkbox" name="newsletter" id="newsletter" />
-<label for="newsletter">Subscribe?</label>
-<br /><br />
+<label for="rating">Rate us out of 5:</label><br />
 
-<button type="submit">Submit</button>
+<input type="radio" name="rating" id="one" value="one" />
+<label for="one">1</label><br />
+
+<input type="radio" name="rating" id="two" value="two" />
+<label for="two">2</label><br />
+
+<input type="radio" name="rating" id="three" value="three" />
+<label for="three">3</label><br />
+
+<input type="radio" name="rating" id="four" value="four" />
+<label for="four">4</label><br />
+
+<input type="radio" name="rating" id="five" value="five" />
+<label for="five">5</label><br /><br />
+
+<button>Send your message!</button>
 </form>
 
 </body>
